--- a/bai 2 buoi 1.html
+++ b/bai 2 buoi 1.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<p align="center" >
-		<img src=".\images\monster1.GIF" width="25%">
+		<img src="..\images\monster1.GIF" width="25%">
 	</p>
 	<br>
 	<br>
